nextcloud.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  labels:
    name: nextcloud-redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: nextcloud-redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: nextcloud-redis
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud-redis
        tier: backend
    spec:
      hostname: redis
      containers:
      - name: redis
        image: redis:3.0.7-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: redis
          containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  labels:
    name: nextcloud-db
spec:
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: nextcloud-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: nextcloud-db
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-db
        tier: backend
    spec:
      hostname: mariadb
      containers:
      - name: mariadb
        image: mariadb:10.4.1
        ports:
          - name: mariadb
            containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  labels:
    app: nextcloud
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8888
  selector:
    app: nextcloud
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
        tier: frontend
    spec:
      hostname: nextcloud
      containers:
        - image: wonderfall/nextcloud:15
          name: nextcloud
          ports:
            - name: nextcloud
              containerPort: 8888
